--- a/Gamesstarter/MainWindow.xaml
+++ b/Gamesstarter/MainWindow.xaml
@@ -11,7 +11,7 @@
             <ColumnDefinition Width="21*"/>
             <ColumnDefinition Width="19*"/>
         </Grid.ColumnDefinitions>
-        <ProgressBar x:Name="ProgressBar" HorizontalAlignment="Center" Height="10" RenderTransformOrigin="0.204,-0.231" HorizontalContentAlignment="Center" Width="400" Grid.ColumnSpan="2" VerticalAlignment="Bottom" VerticalContentAlignment="Center" Value="1" BorderBrush="#FF0CFF48">
+        <ProgressBar x:Name="ProgressBar" HorizontalAlignment="Center" Height="10" RenderTransformOrigin="0.204,-0.231" HorizontalContentAlignment="Center" Width="400" Grid.ColumnSpan="2" VerticalAlignment="Bottom" VerticalContentAlignment="Center" Value="1" BorderBrush="#FF0CFF48" d:IsLocked="True">
             <ProgressBar.Background>
                 <SolidColorBrush Color="Black" Opacity="0.5"/>
             </ProgressBar.Background>
@@ -24,6 +24,7 @@
                 </TransformGroup>
             </ProgressBar.RenderTransform>
         </ProgressBar>
+        <Label x:Name="TipLab" Content="Label" Margin="10,115,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2" Width="400" HorizontalAlignment="Left" HorizontalContentAlignment="Center" VerticalContentAlignment="Bottom" Padding="0,5,0,5" d:IsLocked="True"/>
 
     </Grid>
 </Window>
