--- a/Gamesstarter/ChannelLoginWindow.xaml
+++ b/Gamesstarter/ChannelLoginWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Gamesstarter"
         mc:Ignorable="d"
-        Title="凡人修仙"  Width="1281" Height="805" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Background="Transparent">
+        Title="凡人修仙"  Width="1262" Height="805" WindowStyle="None"  ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Background="Transparent" MaxWidth="1281" MaxHeight="805" MinWidth="1281" MinHeight="805">
     <Grid>
         <Grid.Background>
             <ImageBrush>
@@ -13,6 +13,7 @@
             </ImageBrush>
         </Grid.Background>
         <WebBrowser x:Name="WBroswer" HorizontalAlignment="Left" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Width="590" Height="480" VerticalAlignment="Bottom" Margin="95,0,0,73"/>
+        <Button x:Name="CloseBtn" Content="X" Margin="30,30,30,30" Width="30" Height="30" FontSize="20" VerticalAlignment="Top" Background="#008E3333" Click="OnCloseBtnClick" Foreground="White" HorizontalAlignment="Right"/>
 
     </Grid>
 </Window>
